subi homero.gif

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <!-- peperoca -->
 <h3>Peperoca</h3>
-<img src="img/pika.gif" alt="">
+<img src="img/homero.gif" alt="">
 <!-- peperoca -->
 
 </body>
