puse a mi perrito

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 <!--  caro -->
 <h3>Caro</h3>
-<img src="img/pika.gif" alt="">
+<img src="img/perro.gif" alt="">
 <!--  caro -->
 
 <!--  benja -->
