--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 <!-- peperoca -->
 <h3>Peperoca</h3>
 <img src="img/homero.gif" alt="">
+<h3>PeperocaGif1</h3>
+<img src="img/homero1.gif" alt="">
 <!-- peperoca -->
 
 </body>
