--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!--  caro -->
 
 <!--  benja -->
-<h3><strong>Benja</strong>></h3>
+<h3><strong>Benja</strong>></h3><br><br><br>
 <img src="img/uracilo.gif" alt="">
 <!--  benja -->
 
