--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
 <!--  benja -->
 <h3><strong>Benja</strong>></h3><br><br><br>
-<img src="img/uracilo.gif" alt="">
+<img src="img/uracilo.gif" alt=""><img src="img/uracilo.gif" alt=""><img src="img/uracilo.gif" alt="">
+
+
 <!--  benja -->
 
 
