subi homero2.gif

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <img src="img/homero.gif" alt="">
 <h3>PeperocaGif1</h3>
 <img src="img/homero1.gif" alt="">
+<h3>PeperocaGif2</h3>
+<img src="img/homero1.gif" alt="">
 <!-- peperoca -->
 
 </body>
