subi homero3.gif

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 <img src="img/homero1.gif" alt="">
 <h3>PeperocaGif2</h3>
 <img src="img/homero1.gif" alt="">
+<h3>PeperocaGif3</h3>
+<img src="img/homero1.gif" alt="">
 <!-- peperoca -->
 
 </body>
