--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
 <!--  caro -->
 
 <!--  benja -->
-<h3><strong>Benja</strong>></h3><br><br><br>
+<h3><strong>Ben</strong>></h3><br><br><br>
 <img src="img/uracilo.gif" alt=""><img src="img/uracilo.gif" alt=""><img src="img/uracilo.gif" alt="">
-
-
 <!--  benja -->
 
 
