subi homero4.gif

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 <img src="img/homero1.gif" alt="">
 <h3>PeperocaGif3</h3>
 <img src="img/homero1.gif" alt="">
+<h3>PeperocaGif4</h3>
+<img src="img/homero1.gif" alt="">
 <!-- peperoca -->
 
 </body>
