--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <!--  caro -->
 <h3>Caro</h3>
 <img src="img/perro.gif" alt="">
+<img src="img/banana.gif" alt="">
+
 <!--  caro -->
 
 <!--  benja -->
