--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <h3>Caro</h3>
 <img src="img/perro.gif" alt="">
 <img src="img/banana.gif" alt="">
+<img src="img/jake.gif" alt="">
+
 
 <!--  caro -->
 
