puse mi unicornio

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <img src="img/perro.gif" alt="">
 <img src="img/banana.gif" alt="">
 <img src="img/jake.gif" alt="">
+<img src="img/unicornio.gif" alt="">
 
 
 <!--  caro -->
