--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <img src="img/banana.gif" alt="">
 <img src="img/jake.gif" alt="">
 <img src="img/unicornio.gif" alt="">
+<img src="img/gato.gif" alt="">
 
 
 <!--  caro -->
