--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <img src="img/jake.gif" alt="">
 <img src="img/unicornio.gif" alt="">
 <img src="img/gato.gif" alt="">
-
-
+<img src="img/ted.gif" alt="">
 <!--  caro -->
 
 <!--  benja -->
