--- a/index.html
+++ b/index.html
@@ -7,46 +7,32 @@
 <body>
 
 <h1>GIF'S PARTY</h1>
-<h2>Rulótico</h2>
+<h3>Rulótico</h3>
 <img src="img/pika.gif" alt="">
 
 	
 <!--  caro -->
-<h2>Caro</h2>
+<h3>Caro</h3>
 <img src="img/perro.gif" alt="">
-<img src="img/banana.gif" alt="">
-<img src="img/jake.gif" alt="">
-<img src="img/unicornio.gif" alt="">
-<img src="img/gato.gif" alt="">
-<img src="img/ted.gif" alt="">
 <!--  caro -->
 
 <!--  benja -->
-<h2><strong>Ben</strong>></h2><br><br><br>
-<img src="img/uracilo.gif" alt=""><img src="img/uracilo.gif" alt=""><img src="img/uracilo.gif" alt="">
+<h3>Benja</h3>
+<img src="img/uracilo.gif" alt="">
 <!--  benja -->
 
 
 <!-- pal -->
-<h2>Pal</h2>
+<h3>Pal</h3>
 <img src="img/pal.gif" alt="">
 <img src="img/pal1.gif" alt="">
+<mg  src="img/pal3.gif" alt="">
 <!-- pal -->
 
 
 <!-- peperoca -->
-<h2>Peperoca</h2>
+<h3>Peperoca</h3>
 <img src="img/homero.gif" alt="">
-<h3>PeperocaGif1</h3>
-<img src="img/homero1.gif" alt="">
-<h3>PeperocaGif2</h3>
-<img src="img/homero2.gif" alt="">
-<h3>PeperocaGif3</h3>
-<img src="img/homero3.gif" alt="">
-<h3>PeperocaGif4</h3>
-<img src="img/homero4.gif" alt="">
-<h3>PeperocaGif5</h3>
-<img src="img/homero5.gif" alt="">
 <!-- peperoca -->
 
 </body>
