--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!--  caro -->
 
 <!--  benja -->
-<h2><strong>Ben</strong>></h2><br><br><br>
+<h2><strong>Ben</strong>></h2><br><br><br><p>texto</p>
 <img src="img/uracilo.gif" alt=""><img src="img/uracilo.gif" alt=""><img src="img/uracilo.gif" alt="">
 <!--  benja -->
 
