--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <img src="img/unicornio.gif" alt="">
 <img src="img/gato.gif" alt="">
 <img src="img/ted.gif" alt="">
+<img src="img/gallo.gif" alt="">
 <!--  caro -->
 
 <!--  benja -->
